theme state moved to App.jsx

--- a/frontend/src/components/Home/GetStartedBtn.css
+++ b/frontend/src/components/Home/GetStartedBtn.css
@@ -33,7 +33,7 @@
   animation: animate 2s infinite linear;
 }
 
-.getStarted::before {
+/* .getStarted::before {
   content: '';
   background: linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
   height: 30%;
@@ -44,7 +44,7 @@
   background-size: 200%;
   animation: animate 2s infinite linear;
   filter: blur(calc(0.8 * var(--m)));
-}
+} */
 
 .getStarted:hover, button:hover::before {
   animation: animate 0.5s infinite linear;
